<?xml version="1.0"?>
<package>
  <name>rqt_tf_echo</name>
  <version>0.0.0</version>
  <description>The rqt_tf_echo package</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
